src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/WGLEXTExtensionsString_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLEXTExtensionsString_StringErrorContext.class */
public final class WGLEXTExtensionsString_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglGetExtensionsStringEXT()J", "net/labymod/core/laby3d/opengl/error/generated/WGLEXTExtensionsStringErrorContext");
        methods.put("wglGetExtensionsStringEXT()Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/WGLEXTExtensionsStringErrorContext");
        return methods;
    }
}
